"Galería, JavaScript y Correos".

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -146,7 +146,7 @@ a {
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
     transition: all 300ms ease;
 }
-.menu ul li ul li{
+.menu ul li ul li {
     list-style: none;
 }
 .menu ul li:hover ul {
@@ -329,37 +329,34 @@ a {
     text-align: center;
     margin-bottom: 15%;
 }
-.footer-icon{
+.footer-icon {
     width: 1.5em;
-    margin: 0 .5em;
+    margin: 0 0.5em;
 }
-.footer-title{
+.footer-title {
     margin: 1em 0;
     transition: all 300ms ease;
     border-bottom: 4px solid transparent;
 }
-.footer-container > div:hover > .footer-title{
+.footer-container > div:hover > .footer-title {
     border-color: #065520;
 }
-.footer-element{
+.footer-element {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    margin: .7em 0;
+    margin: 0.7em 0;
 }
-.footer-element p{
-    cursor: pointer;
-}
-.column1{
+.column1 {
     width: 50%;
 }
-.column3 ul .footer-element{
+.column3 ul .footer-element {
     align-items: flex-start;
 }
-.footer-container{
-    font-size: .9em;
+.footer-container {
+    font-size: 0.9em;
     display: flex;
-    flex-wrap: wrap; 
+    flex-wrap: wrap;
     justify-content: space-around;
 }
 .menu-icon {
@@ -405,12 +402,12 @@ p {
     margin-bottom: 30px;
     font-size: var(--title);
 }
-.img-content{
+.img-content {
     width: 100%;
-    border-radius: 7%; 
+    border-radius: 7%;
     border: 2px solid #000;
 }
-.content-section div{
+.content-section div {
     width: 40%;
     margin-right: 1.5em;
     float: left;
@@ -424,12 +421,12 @@ p {
     justify-content: space-around;
     margin: 1.5em 0;
 }
-.struc-line{
+.struc-line {
     width: 90%;
 }
-.struc-img{
+.struc-img {
     width: 40%;
-    border-radius: .5em;
+    border-radius: 0.5em;
     border: 2px solid #000;
 }
 .struc-text {
@@ -438,13 +435,129 @@ p {
     justify-content: center;
     align-items: center;
 }
-.struc-text p{
-    font-size: 1.2em; 
+.struc-text p {
+    font-size: 1.2em;
 }
-.map-container{
+.map-container {
     position: absolute;
     display: none;
 }
+.tabs-div {
+    width: 100%;
+    height: 1.8em;
+    display: flex;
+    align-items: center;
+    height: fit-content;
+    background-color: #065520;
+    border: 5px solid #000;
+    border-bottom: 0;
+    border-top-left-radius: .8em;
+    border-top-right-radius: .8em;
+}
+.tab {
+    color: #fff;
+    width: 50%;
+    text-align: center;
+    padding: 2% 0;
+    cursor: pointer;
+    transition: all 300ms ease;
+}
+.tab:hover {
+    color: #000;
+}
+.line-tab {
+    font-weight: bold;
+    color: #fff;
+}
+.tabs-content {
+    width: 100%;
+    background-color: #289942;
+    border: 5px solid #000;
+    border-top: 0;
+    padding: 3%;
+    border-bottom-left-radius: .8em;
+    border-bottom-right-radius: .8em;
+}
+.section-gallery {
+    flex-direction: column;
+}
+.tab:first-child{
+    background-color: #289942;
+}
+.struc {
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.gallery-img{
+    width: 7em;
+    height: 6em; 
+    object-fit: cover;
+    transition: all 300ms ease;
+}
+.struc > a{
+    display: block;
+    position: relative;
+    overflow: hidden;
+    border: 3px solid #000;
+    border-radius: .5em;
+    margin: 1em;
+}
+#we{
+    display: none;
+}
+.gallery-img:hover{
+    transform: scale(1.1);
+}
+.light-box{
+    position: fixed;
+    top: 0;
+    left: 0;
+    transition: all 300ms ease-in-out;
+    height: 100vh;
+    background-color: #0006;
+    width: 100%;
+    z-index: 300;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: scale(0); 
+}
+.light-box img{
+    width: 75vw;
+    max-height: 80vh;
+    object-fit: cover;
+    border: 5px solid;
+    border-radius: 1em;
+}
+.light-box:target{
+    transform: scale(1);
+}
+.close {
+    display: block;
+    position: absolute;
+    top: 8%;
+    right: 3%;
+    background-color: #289942;
+    color: #000;
+    width: 1.5em;
+    height: 1.5em;
+    text-align: center;
+    line-height: 1.5em;
+    border-radius: 50%;
+}
+.next{
+    display: block;
+    background-color: #289942;
+    color: #000;
+    width: 4.5em;
+    height: 2em; 
+    border-radius: .5em; 
+    line-height: 2em;
+    text-align: center;
+}
+
 @media screen and (max-width: 700px) {
     :root {
         --title: 110%;
@@ -488,7 +601,7 @@ p {
     .galeria .article-container {
         background-size: 40%;
     }
-    .menciones .article-container:hover{
+    .menciones .article-container:hover {
         background-size: 80%;
     }
     .nosotros .article-container:hover {
@@ -527,7 +640,7 @@ p {
     .div-section.index {
         padding: 0;
     }
-    .footer-container{
+    .footer-container {
         flex-direction: column;
     }
     hr {
@@ -537,7 +650,7 @@ p {
         padding: 0;
         margin: 0;
     }
-    .title-section{
+    .title-section {
         margin: 1em 0;
     }
     .main-section {
@@ -585,7 +698,7 @@ p {
         opacity: 1;
         visibility: visible;
     }
-    .content-section div{
+    .content-section div {
         float: none;
         width: 100%;
         margin-bottom: 50px;
@@ -593,16 +706,16 @@ p {
     .content-section {
         padding: 5%;
     }
-    .struc-div{
+    .struc-div {
         flex-direction: column;
         align-items: center;
     }
-    .struc-img{
+    .struc-img {
         width: 40%;
         margin-bottom: 1.8em;
     }
-    .struc-line{
-        width: 100%; 
+    .struc-line {
+        width: 100%;
     }
 }
 /* **** */
