--- a/styles/styles.css
+++ b/styles/styles.css
@@ -523,7 +523,7 @@ p {
     align-items: center;
     transform: scale(0); 
 }
-.light-box img{
+.light-box > img{
     width: 75vw;
     max-height: 80vh;
     object-fit: cover;
@@ -540,21 +540,23 @@ p {
     right: 3%;
     background-color: #289942;
     color: #000;
-    width: 1.5em;
-    height: 1.5em;
     text-align: center;
-    line-height: 1.5em;
+    border: 2px solid;
+    padding: .5em;
     border-radius: 50%;
 }
 .next{
     display: block;
     background-color: #289942;
     color: #000;
-    width: 4.5em;
-    height: 2em; 
-    border-radius: .5em; 
+    border: 2px solid;
+    padding: .5em;
+    border-radius: .5em;
     line-height: 2em;
     text-align: center;
+}
+.img-icon{
+    width: 1.5em;
 }
 
 @media screen and (max-width: 700px) {
@@ -641,6 +643,7 @@ p {
     }
     .footer-container {
         flex-direction: column;
+        align-items: center;
     }
     hr {
         margin: 1em 0;
@@ -710,11 +713,26 @@ p {
         align-items: center;
     }
     .struc-img {
-        width: 40%;
+        width: 60%;
         margin-bottom: 1.8em;
     }
     .struc-line {
         width: 100%;
+    }
+    .tabs-content,.tabs-div{
+        border-left: 0;
+        border-right: 0;
+        border-radius: 0;
+    }
+    .close{
+        width: 1.7em;
+        height: 1.7em;
+    }
+    .close{
+        padding: .3em;
+    }
+    .img-icon{
+        width: 1em;
     }
 }
 /* **** */
