--- a/styles/styles.css
+++ b/styles/styles.css
@@ -516,7 +516,7 @@ p {
     align-items: center;
     transform: scale(0); 
 }
-.light-box > img{
+.light-box > div > img{
     width: 75vw;
     max-height: 80vh;
     object-fit: cover;
@@ -550,6 +550,17 @@ p {
 }
 .img-icon{
     width: 1.5em;
+}
+.light-box > div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.img-description{
+    color: #fff;
+    text-align: center;
+    background-color: #0005;
+    width: fit-content;
 }
 
 @media screen and (max-width: 700px) {
