--- a/styles/styles.css
+++ b/styles/styles.css
@@ -562,6 +562,18 @@ p {
     background-color: #0005;
     width: fit-content;
 }
+.cpy {
+    margin-top: .5em;
+    text-align: center;
+    font-size: .9em;
+}
+.cpy > a {
+    color: inherit;
+}
+.cpy > a:hover {
+    color: #888;
+    cursor: pointer;
+}
 
 @media screen and (max-width: 700px) {
     :root {
