--- a/styles/styles.css
+++ b/styles/styles.css
@@ -574,6 +574,9 @@ p {
     color: #888;
     cursor: pointer;
 }
+.description{
+    display: none;
+}
 
 @media screen and (max-width: 700px) {
     :root {
